add func download file
