# src/main/resources/openapi.yml
@@ -91,28 +91,15 @@ paths:
             type: string
           description: The path to the folder
           required: true
-      #      requestBody:
-#        content:
-#          image/png:
-#            schema:
-#              type: string
-#              format: binary
       requestBody:
         content:
           multipart/form-data:
             schema:
               type: object
               properties:
-#                file:
-#                  type: array
-#                  items:
-#                    type: string
-#                    format: binary
                 file:
                   type: string
                   format: binary
-#              required:
-#                - file
       responses:
         200:
           description: successful operation
@@ -120,6 +107,27 @@ paths:
             text/plain:
               schema:
                 type: string
+  /download:
+    post:
+      summary: downloadFile
+      operationId: download
+      tags:
+        - file
+      parameters:
+        - in: query
+          name: pathToFiles
+          schema:
+            type: string
+          description: The path to the folder
+          required: true
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
 #            application/json:
 #              schema:
 #                type: array
